CascadeMigration_GenericReposiroty_AutoMapper

--- a/fontend/src/app/components/app.component.html
+++ b/fontend/src/app/components/app.component.html
@@ -1,4 +1,11 @@
-<app-nav></app-nav>
 <div class="container">
-   <h1>Dating App</h1>
+    <div class="row">
+        <div class="col-md-12">
+            <app-nav></app-nav>
+
+        </div>
+        <div class="col-md-12 mt-2">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
 </div>
