--- a/fontend/src/app/components/members/members.component.html
+++ b/fontend/src/app/components/members/members.component.html
@@ -1,1 +1,5 @@
-<p>members works!</p>
+<div class="container mt-4">
+    <div class="row">
+        <app-member-card *ngFor="let user of users" [user]="user"></app-member-card>
+    </div>
+</div>
