--- a/fontend/src/app/components/members/member-edit/member-edit.component.html
+++ b/fontend/src/app/components/members/member-edit/member-edit.component.html
@@ -67,7 +67,7 @@
                 </tab>
 
                 <tab heading="Photos">
-                    <app-photo-editor [photos]="user.photos"></app-photo-editor>
+                    <app-photo-editor [photos]="user.photos" (photoUploaded)="photoUploaded($event)"></app-photo-editor>
                 </tab>
 
             </tabset>
