--- a/fontend/src/app/components/members/photo-editor/photo-editor.component.html
+++ b/fontend/src/app/components/members/photo-editor/photo-editor.component.html
@@ -2,7 +2,8 @@
     <div class="col-md-2 text-center" *ngFor="let photo of photos" style="margin: 15px 25px !important;">
         <img src="{{photo.url}}" alt="" class="img-thumbnail p-1">
         <div class="btn-group">
-            <button class="btn btn-success">Main</button>
+            <button class="btn" [disabled]="photo.isMain" [ngClass]="photo.isMain? 'btn-success' : 'btn-info'"
+                (click)="setMainPhoto(photo.id)">Main</button>
             <button class="btn btn-danger">
                 <i class="fa fa-trash"></i>
             </button>
@@ -29,16 +30,16 @@
 <div class="row">
     <div class="col-md-12">
         <file-upload [ngModel]="uploadedFiles" [control]="fileUploadControl"></file-upload>
-        <button class="btn btn-info">Upload Files</button>
+        <button class="btn btn-info" (click)="uploadFiles()">Upload Files</button>
 
-        <div class="alert alert-success" *ngIf="fileUploadControl.value.length > 0">
+        <!-- <div class="alert alert-success" *ngIf="fileUploadControl.value.length > 0">
             <div class="file-list">
                 <div class="file-item" *ngFor="let file of fileUploadControl.value"
                     (click)="fileUploadControl.removeFile(file)">
                     {{ file.name }}
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
     </div>
